[build-system]
requires = ["setuptools>=40.8.0", "setuptools_scm", "wheel"]
build-backend = "setuptools.build_meta"

[tool.tox]
legacy_tox_ini = """
[tox]
envlist = py{36,37,38,39}, coverage-report
minversion = 3.3.0
isolated_build = true
skip_missing_interpreters = true

[gh-actions]
python =
    3.6: py36, coverage-report
    3.7: py37, coverage-report
    3.8: py38, coverage-report
    3.9: py39, coverage-report

[testenv]
setenv = PYTHONHASHSEED = 42
passenv =
    OANDA_HOSTNAME
    OANDA_TOKEN
    OANDA_ACCOUNT_ID
deps = pandas<1.4
extras = test
commands = coverage run -m pytest {posargs}

[testenv:coverage-report]
skip_install = true
deps = coverage[toml]>=5.0.2
commands =
    coverage combine
    coverage report
"""

[tool.coverage.run]
parallel = true
source = ["filib"]

[tool.coverage.paths]
source = ["src", ".tox/*/site-packages"]

[tool.coverage.report]
show_missing = true
